--- a/Syit/index.html
+++ b/Syit/index.html
@@ -108,7 +108,7 @@
 
   if (!token) {
     // No token found, redirect to login
-    window.location.href = "https://zen-tech-student-portal.vercel.app/login.html";
+    window.location.href = "https://zen-tech-student-portal.vercel.app/";
   }
 
 </script>
@@ -117,7 +117,7 @@
 <script>
   function logout() {
     localStorage.removeItem("sessionToken");
-    window.location.href = "https://zen-tech-student-portal.vercel.app/login.html";
+    window.location.href = "https://zen-tech-student-portal.vercel.app/";
   }
 </script>
   <!-- Spinner Overlay -->
