--- a/Sycs/Subject/Python/index.html
+++ b/Sycs/Subject/Python/index.html
@@ -36,7 +36,7 @@
 
       <!-- Subheader -->
       <div class="px-6 py-4 text-purple-900 font-semibold border-b border-purple-300">
-        SYIT
+        SYCS
       </div>
 
       <!-- Navigation Buttons -->
