--- a/Sycs/Subject/Python/index.html
+++ b/Sycs/Subject/Python/index.html
@@ -31,7 +31,7 @@
     <div>
       <!-- Header -->
       <div class="p-6 bg-purple-700 text-white text-xl font-bold">
-        Dashboard
+        PYTHON 
       </div>
 
       <!-- Subheader -->
@@ -41,7 +41,7 @@
 
       <!-- Navigation Buttons -->
       <nav class="flex flex-col p-4 space-y-3">
-        <button onclick="window.location.href='https://mgmfyit.vercel.app/';" class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600 transition">Back to Dashboard</button>
+        <button onclick="window.location.href='https://zen-tech-student-portal.vercel.app/Sycs';" class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600 transition">Back to Dashboard</button>
         <button onclick="showSubjects()" class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600 transition">Notes</button>
         <button onclick="showEvents()"class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600 transition">Code Editor</button>
          </nav>
