--- a/Sycs/index.html
+++ b/Sycs/index.html
@@ -125,7 +125,7 @@
 
   
 <div class="space-y-4 hidden" id="resultSection">
-  <h2 class="text-xl font-bold">Upload Result File</h2>
+  <h2 class="text-xl font-bold"> Result</h2>
   <input type="file" id="fileInput" />
   <button id="uploadBtn" class="bg-blue-600 text-white px-4 py-2 rounded">Upload</button>
 
