--- a/Sycs/Subject/Python/index.html
+++ b/Sycs/Subject/Python/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-purple-50 h-screen flex">
 
-
+<!-- 
     <script>
   const token = localStorage.getItem("sessionToken");
 
@@ -18,7 +18,7 @@
   }
 
 </script>
-
+-->
  <!-- Loading Spinner -->
   <div id="spinnerOverlay" class="fixed inset-0 bg-white bg-opacity-60 backdrop-blur-sm flex justify-center items-center z-50">
     <div class="w-16 h-16 border-4 border-purple-500 border-t-transparent rounded-full animate-spin"></div>
@@ -67,7 +67,192 @@
     <div id="subjectSection" class="hidden space-y-4">
       <h2 class="text-2xl font-bold text-purple-800">📚 Notes</h2>
       <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
-  <li><a href="#" class="block bg-purple-100 px-4 py-2 rounded shadow hover:bg-purple-200 transition">Not Available</a></li>
+         <input type="file" id="fileInput" />
+  <button id="uploadBtn" class="bg-blue-600 text-white px-4 py-2 rounded">Upload</button>
+
+  <!-- Popup Modal -->
+  <div id="popup" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div class="bg-white p-6 rounded shadow-lg w-80">
+      <div id="popupContent">
+        <h2 class="text-xl font-semibold mb-4">Attention!</h2>
+        <p class="mb-4">You require admin privilege for this action!</p>
+        <div class="flex justify-between">
+          <button id="adminAccessBtn" class="bg-green-600 text-white px-4 py-2 rounded">Admin Access</button>
+          <button id="closeBtn" class="bg-gray-400 text-white px-4 py-2 rounded">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <ul id="fileList" class="mt-4 space-y-2"></ul>
+
+
+  <script type="module">
+  import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+
+  const supabaseUrl = "https://ellxxhwuohbezfijkwvt.supabase.co";
+  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVsbHh4aHd1b2hiZXpmaWprd3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg1MjMyNjYsImV4cCI6MjA2NDA5OTI2Nn0.cWuvYFKNV7FnD52B0n94cOFmzCFUIhxHy-sWnOLR6sI"; // Please keep your keys secure
+  const supabase = createClient(supabaseUrl, supabaseKey);
+
+  const fileInput = document.getElementById("fileInput");
+  const uploadBtn = document.getElementById("uploadBtn");
+  const fileList = document.getElementById("fileList");
+  const popup = document.getElementById('popup');
+  const popupContent = document.getElementById('popupContent');
+
+  // When "Upload" button is clicked, show the popup instead of uploading immediately
+  uploadBtn.addEventListener('click', () => {
+    if (!fileInput.files[0]) {
+      alert('Please select a file first');
+      return;
+    }
+    popup.style.display = 'flex';
+  });
+
+  // Function to reset popup to initial state
+  function resetPopup() {
+    popupContent.innerHTML = `
+      <h2 class="text-xl font-semibold mb-4">Attention!</h2>
+      <p class="mb-4">You require admin privilege for this action!</p>
+      <div class="flex justify-between">
+        <button id="adminAccessBtn" class="bg-green-600 text-white px-4 py-2 rounded">Admin Access</button>
+        <button id="closeBtn" class="bg-gray-400 text-white px-4 py-2 rounded">Close</button>
+      </div>
+    `;
+    // Rebind buttons in popup
+    document.getElementById('adminAccessBtn').addEventListener('click', showAdminCodeInput);
+    document.getElementById('closeBtn').addEventListener('click', () => {
+      popup.style.display = 'none';
+      resetPopup();
+    });
+  }
+
+  // Show admin code input form
+  function showAdminCodeInput() {
+    popupContent.innerHTML = `
+      <h2 class="text-xl font-semibold mb-4">Enter Admin Code</h2>
+      <input type="password" id="adminCodeInput" placeholder="Enter code here" class="border border-gray-300 rounded px-3 py-2 w-full mb-4" />
+      <div class="flex justify-between">
+        <button id="submitCodeBtn" class="bg-blue-600 text-white px-4 py-2 rounded">Submit</button>
+        <button id="cancelBtn" class="bg-gray-400 text-white px-4 py-2 rounded">Cancel</button>
+      </div>
+      <p id="errorMsg" class="text-red-600 mt-2 hidden">Incorrect code, please try again.</p>
+    `;
+
+    // Bind submit and cancel buttons
+    document.getElementById('submitCodeBtn').addEventListener('click', handleAdminCodeSubmit);
+    document.getElementById('cancelBtn').addEventListener('click', () => {
+      popup.style.display = 'none';
+      resetPopup();
+    });
+  }
+
+  // Handle admin code submission
+  async function handleAdminCodeSubmit() {
+    const input = document.getElementById('adminCodeInput').value.trim();
+    const errorMsg = document.getElementById('errorMsg');
+
+    if (input === '#8gjgpjyq2') {
+      errorMsg.classList.add('hidden');
+      popup.style.display = 'none';
+      resetPopup();
+      // Proceed to upload file after admin access granted
+      await uploadFile();
+    } else {
+      errorMsg.classList.remove('hidden');
+    }
+  }
+
+  // Initialize popup buttons event listeners
+  document.getElementById('adminAccessBtn').addEventListener('click', showAdminCodeInput);
+  document.getElementById('closeBtn').addEventListener('click', () => {
+    popup.style.display = 'none';
+    resetPopup();
+  });
+
+  // Upload file function
+  async function uploadFile() {
+    const file = fileInput.files[0];
+    if (!file) {
+      alert("No file selected.");
+      return;
+    }
+
+    uploadBtn.disabled = true;
+    uploadBtn.textContent = "Uploading...";
+
+    try {
+      const { data: uploadData, error: uploadError } = await supabase.storage
+        .from("results")
+        .upload(`public/${file.name}`, file, { cacheControl: "3600", upsert: true });
+
+      if (uploadError) throw uploadError;
+
+      const { data } = supabase.storage.from("results").getPublicUrl(`public/${file.name}`);
+      const publicUrl = data.publicUrl;
+
+      const { error: insertError } = await supabase
+        .from("uploaded_files")
+        .insert([{ file_name: file.name, file_url: publicUrl }]);
+
+      if (insertError) throw insertError;
+
+      alert("File uploaded successfully!");
+      fileInput.value = "";
+      fetchFiles();
+
+    } catch (err) {
+      alert("Error uploading file: " + err.message);
+    } finally {
+      uploadBtn.disabled = false;
+      uploadBtn.textContent = "Upload";
+    }
+  }
+
+  // Fetch uploaded files list
+  async function fetchFiles() {
+    const { data, error } = await supabase
+      .from("uploaded_files")
+      .select()
+      .order("uploaded_at", { ascending: false });
+
+    if (error) {
+      console.error("Error fetching files:", error);
+      return;
+    }
+
+    fileList.innerHTML = ""; // clear list
+
+    data.forEach(file => {
+      const li = document.createElement("li");
+      li.innerHTML = `
+        <a href="${file.file_url}" target="_blank" class="text-blue-600 underline">${file.file_name}</a>
+      `;
+      fileList.appendChild(li);
+    });
+  }
+
+  fetchFiles();
+
+  // Optional: realtime subscription to update file list dynamically when new file added
+  supabase
+    .channel("public:uploaded_files")
+    .on(
+      "postgres_changes",
+      { event: "INSERT", schema: "public", table: "uploaded_files" },
+      (payload) => {
+        const newFile = payload.new;
+        const li = document.createElement("li");
+        li.innerHTML = `
+          <a href="${newFile.file_url}" target="_blank" class="text-blue-600 underline">${newFile.file_name}</a>
+        `;
+        fileList.insertBefore(li, fileList.firstChild); // newest on top
+      }
+    )
+    .subscribe();
+
+</script>
+        
    
       </ul>
     </div>
