--- a/Syit/index.html
+++ b/Syit/index.html
@@ -164,7 +164,7 @@
     <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
       <li><a href="#" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">💻 Operating System</a></li>
       <li><a href="#" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">📐 Applied Mathematics</a></li>
-      <li><a href="#" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">🐍 Python</a></li>
+      <li><a href="https://zen-tech-student-portal.vercel.app/Syit/Subject/Python" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">🐍 Python</a></li>
     </ul>
   </div>
 
