--- a/Syit/index.html
+++ b/Syit/index.html
@@ -254,7 +254,7 @@
       <li><a href="#" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">💻 Operating System</a></li>
       <li><a href="#" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">📐 Applied Mathematics</a></li>
       <li><a href="https://zen-tech-student-portal.vercel.app/Syit/Subject/Python" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">🐍 Python</a></li>
-      <li><a href="#" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">🧮 Data Structure</a></li>
+      <li><a href="https://zen-tech-student-portal.vercel.app/Syit/Subject/Data-Science" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">🧮 Data Structure</a></li>
       <li><a href="#" class="block bg-gray-200 dark:bg-gray-900 px-4 py-2 rounded shadow hover:bg-violet-200 dark:hover:bg-violet-800 transition">💰 Finance</a></li>
 
 
